cmake_minimum_required(VERSION 3.27)
project(Tandon_Bridge)

set(CMAKE_CXX_STANDARD 14)

add_executable(Tandon_Bridge
        "C++ Tests/arraystesting.cpp"
        "C++ Tests/HelloWorld.cpp"
        "C++ Tests/pascalsimilar.cpp"
        Exam1/iae225q1-12.cpp
        Exam1/iae225q13.cpp
        Exam1/iae225q14.cpp
        Exam2/CodingSols/march2021q5.cpp
        Exam2/CodingSols/march2021q6.cpp
        Exams/NYUBridgeExamPrepAnswerKeys/Exam_1/Answer_Keys/2019_Aug_Exam1/2019_Aug_Exam1_Answer_Key.cpp
        Exams/NYUBridgeExamPrepAnswerKeys/Exam_1/Answer_Keys/2019_Aug_Exam1/Aug2019_q12.cpp
        Exams/NYUBridgeExamPrepAnswerKeys/Exam_1/Answer_Keys/2021_Feb_Exam1/2021_Feb_Exam1_Answer_Key.cpp
        HomeWork2/iae225_hw2_q1.cpp
        HomeWork2/iae225_hw2_q2.cpp
        HomeWork2/iae225_hw2_q3.cpp
        HomeWork2/iae225_hw2_q4.cpp
        HomeWork3/iae225.hw3.q1.cpp
        HomeWork3/iae225.hw3.q2.cpp
        HomeWork3/iae225.hw3.q3.cpp
        HomeWork3/iae225.hw3.q4.cpp
        HomeWork3/iae225.hw3.q5.cpp
        HomeWork3/iae225.hw3.q6.cpp
        HomeWork4/iae225.hw4.q1.cpp
        HomeWork4/iae225.hw4.q2.cpp
        HomeWork4/iae225.hw4.q3.cpp
        HomeWork4/iae225.hw4.q4.cpp
        HomeWork4/iae225.hw4.q5.cpp
        HomeWork4/iae225.hw4.q6.cpp
        HomeWork4/iae225.hw4.q7.cpp
        HomeWork4/iae225.hw4.q8.cpp
        HomeWork5/iae225.hw5.q1.cpp
        HomeWork5/iae225.hw5.q2.cpp
        HomeWork5/iae225.hw5.q3.cpp
        HomeWork5/iae225.hw5.q4.cpp
        HomeWork5/iae225.hw5.q5.cpp
        HomeWork5/iae225.hw5.q6.cpp
        HomeWork6/iae225.hw6.q1.cpp
        HomeWork6/iae225.hw6.q2.cpp
        HomeWork6/iae225.hw6.q3.cpp
        HomeWork6/iae225.hw6.q4.cpp
        HomeWork6/iae225.hw6.q5.cpp
        HomeWork6/iae225.hw6.q6.cpp
        HomeWork7/iae225.hw7.q1.cpp
        HomeWork7/iae225.hw7.q2.cpp
        HomeWork7/iae225.hw7.q3.cpp
        HomeWork7/iae225.hw7.q4.cpp
        HomeWork7/iae225.hw7.q5.cpp
        HomeWork7/iae225.hw7.q6.cpp
        HomeWork7/iae225.hw7.q7.cpp
        HomeWork8/iae225.h28.q4.cpp
        HomeWork8/iae225.hw8.q1.cpp
        HomeWork8/iae225.hw8.q2.cpp
        HomeWork8/iae225.hw8.q3.cpp)
